force-app/main/default/objects/Policy__c/fields/Policy_Cost__c.field-meta.xml
<CustomField>
    <fullName>Policy_Cost__c</fullName>
    <label>Policy Cost</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>