force-app/main/default/objects/Policy__c/fields/Policy_Owner1__c.field-meta.xml
<CustomField>
    <fullName>Policy_Owner1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Policy Owner</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Policies</relationshipLabel>
    <relationshipName>Policies</relationshipName>
    <type>Lookup</type>
</CustomField>