force-app/main/default/objects/Policy__c/fields/Policy_Owner__c.field-meta.xml
<CustomField>
    <fullName>Policy_Owner__c</fullName>
    <label>Policy Owner</label>
    <length>30</length>
    <required>true</required>
    <type>Text</type>
</CustomField>