force-app/main/default/objects/Policy__c/fields/Policy_Owner_Phone__c.field-meta.xml
<CustomField>
    <fullName>Policy_Owner_Phone__c</fullName>
    <label>Policy Owner Phone</label>
    <required>true</required>
    <type>Phone</type>
</CustomField>