force-app/main/default/objects/Policy__c/fields/Policy_Status__c.field-meta.xml
<CustomField>
    <fullName>Policy_Status__c</fullName>
    <label>Policy Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Not Active</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>