force-app/main/default/objects/Policy__c/fields/ProductP__c.field-meta.xml
<CustomField>
    <fullName>ProductP__c</fullName>
    <label>Product</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N665</fullName>
            </value>
            <value>
                <fullName>19F</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>