force-app/main/default/objects/Policy__c/recordTypes/Health_Insurance.recordType-meta.xml
<RecordType>
    <fullName>Health_Insurance</fullName>
    <active>true</active>
    <description>Health insurance products (N665)</description>
    <label>Health Insurance</label>
</RecordType>