force-app/main/default/objects/Policy__c/recordTypes/Life_Insurance.recordType-meta.xml
<RecordType>
    <fullName>Life_Insurance</fullName>
    <active>true</active>
    <description>Life insurance products (19F)</description>
    <label>Life Insurance</label>
</RecordType>