force-app/main/default/objects/Policy__c/validationRules/Check_SSN_Syntax.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_SSN_Syntax</fullName>
    <active>true</active>
    <errorConditionFormula>AND( 
LEN(Social_Security_Number__c ) &gt; 0, 
NOT(REGEX( Social_Security_Number__c , &quot;[0-9]{3}-[0-9]{2}-[0-9]{4}&quot;))
)</errorConditionFormula>
    <errorDisplayField>Social_Security_Number__c</errorDisplayField>
    <errorMessage>Use xxx-xx-xxxx format for SSN</errorMessage>
</ValidationRule>